src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.hint-animation {
  animation: revealHint linear, revealCharCell linear;
  animation-duration: 0.5s;
  animation-iteration-count: 1;
}

@keyframes revealHint {
  0% {
    opacity: 0;
  }

  20% {
    opacity: 1;
  }

  100% {
    opacity: 1;
  }
}

.cell-animation {
  animation: revealCharCell linear;
  animation-duration: 0.15s;
}

@keyframes revealCharCell {
  0% {
    transform: scale(0.8);
  }

  50% {
    transform: scale(1.1);
  }

  100% {
    transform: scale(1);
  }
}

